style: fix browse overflow

--- a/nx2/blocks/browse/browse.css
+++ b/nx2/blocks/browse/browse.css
@@ -1,3 +1,7 @@
+body:has(.browse) {
+  overflow: hidden;
+}
+
 :host {
   display: block;
   box-sizing: border-box;
